# r-linux

./: AUTHORS  Cargo.toml  Makefile  NEWS.md  README.md
.github/workflows/: fmt.yml  test.yml
examples/: freestanding-syscall.rs
src/: lib.rs
src/r-linux-syscall/: Cargo.toml  api.rs  build.rs  lib.rs  nr.rs  raw.rs
src/r-linux-syscall/arch/: mod.rs
src/r-linux-syscall/arch/x86/: generate.py  mod.rs  native.c  nr.rs
src/r-linux-syscall/arch/x86_64/: generate.py  mod.rs  native.c  nr.rs
src/r-linux-syscall/examples/: syscall-freestanding.rs
src/syscall/: api.rs  mod.rs  raw.rs
src/syscall/arch/: mod.rs
src/syscall/arch/x86/: mod.rs  syscall.rs
src/syscall/arch/x86_64/: mod.rs  syscall.rs
