[package]
name = "r-linux"
version = "0.1.0"

authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
]
categories = [
        "no-std",
        "os",
]
description = "Capability-based Linux Runtime"
edition = "2021"
homepage = "https://github.com/bus1/r-linux"
keywords = [
        "api",
        "kernel",
        "linux",
        "runtime",
        "syscall",
]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/bus1/r-linux"

[features]
freestanding = []
unstable = []

[[example]]
name = "freestanding-syscall"
required-features = ["freestanding"]
