[package]
name = "r-linux-syscall"
version = "0.1.0"

authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
]
categories = [
        "no-std",
        "os",
]
description = "Linux Kernel System Calls"
edition = "2018"
homepage = "https://github.com/bus1/r-linux"
keywords = [
        "api",
        "kernel",
        "linux",
        "syscall",
]
license = "Apache-2.0 OR LGPL-2.1-or-later"
repository = "https://github.com/bus1/r-linux"

[features]
freestanding-example = []

[build-dependencies]
cc = "1.0"

[lib]
path = "lib.rs"

[[example]]
name = "syscall-freestanding"
required-features = ["freestanding-example"]
